--- a/sections/fairness_through_data_rebalacing.tex
+++ b/sections/fairness_through_data_rebalacing.tex
@@ -1,12 +1,12 @@
-\usepackage{amsmath}
-\usepackage{algorithmic}
-\usepackage{amssymb}
-\usepackage{algorithm}
-\usepackage[utf8]{inputenc}
-\usepackage{algpseudocode}
-\usepackage{tabularx}
-\usepackage{graphicx}
-\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
+%\usepackage{amsmath}
+%\usepackage{algorithmic}
+%\usepackage{amssymb}
+%\usepackage{algorithm}
+%\usepackage[utf8]{inputenc}
+%\usepackage{algpseudocode}
+%\usepackage{tabularx}
+%\usepackage{graphicx}
+%s\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 
 \section{Fairness through data rebalancing}
 \subsection{A New Definition of Fairness}
