--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1,8 +1,13 @@
 \documentclass[12pt,a4paper,openright,twoside]{book}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
+\usepackage{algorithmic}
 \usepackage{amssymb}
+\usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{tabularx}
+\usepackage{graphicx}
+\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 
 
 \newcommand{\thesislang}{english} % commentare in caso di tesi in italiano
