--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{algorithm}
+%\usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{tabularx}
 \usepackage{graphicx}
