doc: last algorithm added

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -567,6 +567,8 @@ For each iteration:
     }
 \end{algorithm}
 
+\section{Fairness through equity attributes in linear models}
+
 %----------------------------------------------------------------------------------------
 \chapter{Implementation} % possible chapter for Projects
 \label{chap:implementation}
