--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -584,7 +584,7 @@ Furthermore, after a proper domain analysis the protected attributes selected to
 \begin{enumerate}
     \item sex
     \item capital island: if the student comes from the capital of the city
-    \item public_private: if the school is public or private
+    \item public\textunderscore private: if the school is public or private
     \item inmigrant: if the student is either inmigrant or not
     \item inmigrant second gen: if the student is either inmigrand of second gen or not
     \item parent expectation
