--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -599,7 +599,7 @@ More specifically:
 \end{itemize}
 
 \subsection{Goal of this work}
-The goal of this work is the one to predict the level of english for the current grade (3/4/6) based on past experience. To achieve this we computed on the \emph{level_ing} attribute the same pre-processing transofrmation used for not-binary protected attributes. This means that we want \textbf{match} the students to establish if a given student is either under or over the mean.
+The goal of this work is the one to predict the level of english for the current grade 3,4,6 based on past experience. To achieve this we computed on the \emph{level_ing} attribute the same pre-processing transofrmation used for not-binary protected attributes. This means that we want \textbf{match} the students to establish if a given student is either under or over the mean.
 
 \lstinputlisting[
 	float,
