doc: several implementation sections inserted

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -601,18 +601,22 @@ More specifically:
 \subsection{Goal of this work}
 The goal of this work is the one to predict the level of english for the current grade based on past experience. To achieve this we computed on the \emph{level\textunderscore ing} attribute the same pre-processing transofrmation used for not-binary protected attributes. This means that we want \textbf{match} the students to establish if a given student is either under or over the mean.
 
-\lstinputlisting[
-	float,
-	language=Java,
-	caption={My very first program in Java},
-	label={lst:helloworld},
-]{listings/HelloWorld.java}
+%\lstinputlisting[
+%	float,
+%	language=Java,
+%	caption={My very first program in Java},
+%	label={lst:helloworld},
+%]{listings/HelloWorld.java}
 
-You may need to reference listings in your thesis.
+%You may need to reference listings in your thesis.
 %
-In this case, you are encouraged to make them \emph{floating}, and reference them by means of labels.
+%In this case, you are encouraged to make them \emph{floating}, and reference them by means of labels.
 %
-For instance, in \Cref{lst:helloworld}, we describe an hello world program in Java.
+%For instance, in \Cref{lst:helloworld}, we describe an hello world program in Java.
+
+\section{Fairness through unawareness with proxy detection}
+\section{Fairness through data rebalancing}
+\section{Fairness through equity attributes in linear models}
 
 %----------------------------------------------------------------------------------------
 \chapter{Validation} % possible chapter for Projects
