--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -615,6 +615,21 @@ The goal of this work is the one to predict the level of english for the current
 %For instance, in \Cref{lst:helloworld}, we describe an hello world program in Java.
 
 \section{Fairness through unawareness with proxy detection}
+In this section we go through the several implementative issues that have been encountered during the development of this algorithm. We will explore in detail the two approaches, the one with \textbf{apriori} and the one in which only the \textbf{variables} have been taken in account. \\
+Before moving on it's important to be more detailed about the fairness metric we decided to use.
+\subsection{Disparate Impact}
+isparate Impact (DI) is a fairness metric commonly used in the context of algorithmic decision-making and predictive modeling. It is designed to measure the potential discriminatory effects of a decision-making process on different demographic groups.
+
+The Disparate Impact metric is defined as the ratio of the probability of a favorable outcome for the disadvantaged group to the probability of a favorable outcome for the advantaged group:
+
+\[
+\text{Disparate Impact (DI)} = \frac{P(\text{Favorable Outcome} | \text{Disadvantaged Group})}{P(\text{Favorable Outcome} | \text{Advantaged Group})}
+\]
+
+where $P(\text{Favorable Outcome} | \text{Disadvantaged Group})$ is the probability of a favorable outcome given membership in the disadvantaged group, and $P(\text{Favorable Outcome} | \text{Advantaged Group})$ is the probability of a favorable outcome given membership in the advantaged group.
+
+\subsection{Proxy detection via apriori}
+\subsection{Proxy detection via variables only}
 \section{Fairness through data rebalancing}
 \section{Fairness through equity attributes in linear models}
 
