--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -43,8 +43,8 @@ Never too far down, to come back
 
 %----------------------------------------------------------------------------------------
 \tableofcontents   
-\listoffigures     % (optional) comment if empty
-\lstlistoflistings % (optional) comment if empty
+%\listoffigures     % (optional) comment if empty
+%\lstlistoflistings % (optional) comment if empty
 %----------------------------------------------------------------------------------------
 
 \mainmatter
