--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -630,12 +630,10 @@ where $P(\text{Favorable Outcome} | \text{Disadvantaged Group})$ is the probabil
 
 \subsection{Proxy detection via apriori}
 The implementation of this approach has proceeded according a modular approach and, more specifically, has been developed a module named \emph{fairness} in which there are all the sub-modules needed to implement this approach.
-\begin{enumerate}
-    \item \emph{fairness\textunderscore metric module}
-    \item \emph{matching module}
-    \item \emph{pre\textunderscore processing module}
-    \item \emph{proxy module}
-\end{enumerate}
+\subsubsection{fairness\textunderscore metric module}
+\subsubsection{matching module}
+\subsubsection{pre\textunderscore processing module}
+\subsubsection{proxy module}
 \subsection{Proxy detection via variables only}
 \section{Fairness through data rebalancing}
 \section{Fairness through equity attributes in linear models}
