--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -44,7 +44,7 @@ Never too far down, to come back
 %----------------------------------------------------------------------------------------
 \tableofcontents   
 %\listoffigures     % (optional) comment if empty
-%\lstlistoflistings % (optional) comment if empty
+\lstlistoflistings % (optional) comment if empty
 %----------------------------------------------------------------------------------------
 
 \mainmatter
@@ -636,6 +636,7 @@ This implementation provides to the user the information about the fairness stat
 	float,
 	language=Python,
 	caption={Fairness evaluation implementation},
+    label={lst:fairness_eval}
 ]{listings/fairness_eval.py}
 
 \subsubsection{matching module}
